Mon Jan 13 21:35:29 1992  Per Cederqvist  (ceder at robin)

	* commands1.el (lyskom-comment-recipients): Catch quits via a
	  condition-case.

Sun Jan 12 06:00:17 1992  Inge Wallin  (inge at lysator)

	* lyskom-rest.el(lyskom-filter),
	  startup.el(lyskom-connect-filter): Stoppat in (sit-for 0) som
	  Klaus Zeuge har f|reslagit f|r att inte klienten skall sv{lta ut
	  andra emacsprocesser.

Mon Jan  6 19:46:50 1992  Linus Tolke Y  (linus at lysator)

	* swedish-strings.el, english-strings.el, commands1.el
	  (go-to-conf): Fixat s} att namnen {r unika.

Wed Dec 18 04:33:02 1991  Linus Tolke Y  (linus at robert)

	* Distribuerat version 0.34.3		   05:12

	* vars.el (lyskom-who-info-buffer-is-on): Default on.

	* cache.el, startup.el (lyskom-who-info-buffer): Nu skapas
	  bufferten senare och bara ifall det beh|vs.

Mon Dec 16 01:03:06 1991  Linus Tolke Y  (linus at robin)

	* async.el (lyskom-add-new-text): om vi inte f}r h{mta
	  conf-statusen f|r ett m|te som inl{gget skickades till s}
	  sm{ller denna funktion. Nu hanterar den det.

Fri Dec 13 19:50:56 1991  Linus Tolke Y  (linus at ruben)

	* lyskom-rest.el, review.el, swedish-strings.el, vars.el
	  (lyskom-is-read, lyskom-normally-read-texts,
	  kom-review-last-normally-read): Nu finns det m|jlighet att
	  }terse senaste normalt l{sta igen.

Fri Dec 13 19:17:48 1991  Inge Wallin  (inge at lysator)

	* commands2.el, swedish-strings.el: Nytt kommando "[ndra
	  superm|te"   Nya funktioner: kom-set-super-conf,
	  lyskom-set-super-conf, lyskom-set-super-conf-2,
	  lyskom-set-super-conf-3 

Wed Nov 27 23:21:43 1991  Per Cederqvist  (ceder at robin)

	* swedish-strings.el (y-or-n-instring, y-instring): SPC och DEL
	  borttagna.

	* completing-read.el (lyskom-hack-minibuf): Raden 
	  "(setq foo minibuffer-scroll-window)" (som antagligen bara var
	  en bortgl|md debugrad) borttagen.

Sun Nov 24 03:41:56 1991  Per Cederqvist  (ceder at robert)

	* commands1.el (lyskom-write-comment-soon): Skrev lite kommentarer.
